--- a/src/test.html
+++ b/src/test.html
@@ -8,5 +8,5 @@
 <body style="background:black;">
     
 </body>
-<script src="../dist/test.js"></script>
+<script type="module" src="../dist/test.js"></script>
 </html>
