--- a/src/test.html
+++ b/src/test.html
@@ -7,6 +7,8 @@
 </head>
 <body style="background:black;">
     
+    <div class="myElem">kaveh</div>
+
 </body>
 <script type="module" src="../dist/test.js"></script>
 </html>
